#166 - list month goals via api
