# sporttracker/api/Api.py
@@ -1,0 +1,70 @@
+import logging
+
+from flask import Blueprint, jsonify, render_template, redirect, url_for
+from flask_login import login_required, current_user
+
+from sporttracker.api.Mapper import (
+    MAPPER_MONTH_GOAL_DISTANCE,
+    MAPPER_MONTH_GOAL_COUNT,
+    MAPPER_MONTH_GOAL_DURATION,
+)
+from sporttracker.logic import Constants
+from sporttracker.logic.model.MonthGoal import MonthGoalDistance, MonthGoalCount, MonthGoalDuration
+
+LOGGER = logging.getLogger(Constants.APP_NAME)
+
+API_VERSION = '2.0.0'
+
+
+def construct_blueprint():
+    api = Blueprint('api', __name__, static_folder='static', url_prefix='/api')
+
+    @api.route('/')
+    @login_required
+    def apiIndex():
+        return redirect(url_for('api.docs'))
+
+    @api.route('/version')
+    @login_required
+    def getVersion():
+        return jsonify({'version': API_VERSION})
+
+    @api.route('/docs')
+    @login_required
+    def docs():
+        return render_template('swaggerui/swaggerui.jinja2')
+
+    @api.route('/monthGoals/monthGoalDistance')
+    @login_required
+    def listMonthGoalDistance():
+        monthGoals = (
+            MonthGoalDistance.query.filter(MonthGoalDistance.user_id == current_user.id)
+            .order_by(MonthGoalDistance.year.asc(), MonthGoalDistance.month.asc())
+            .all()
+        )
+
+        return jsonify([MAPPER_MONTH_GOAL_DISTANCE.map(m) for m in monthGoals])
+
+    @api.route('/monthGoals/monthGoalCount')
+    @login_required
+    def listMonthGoalCount():
+        monthGoals = (
+            MonthGoalCount.query.filter(MonthGoalCount.user_id == current_user.id)
+            .order_by(MonthGoalCount.year.asc(), MonthGoalCount.month.asc())
+            .all()
+        )
+
+        return jsonify([MAPPER_MONTH_GOAL_COUNT.map(m) for m in monthGoals])
+
+    @api.route('/monthGoals/monthGoalDuration')
+    @login_required
+    def listMonthGoalDuration():
+        monthGoals = (
+            MonthGoalDuration.query.filter(MonthGoalDuration.user_id == current_user.id)
+            .order_by(MonthGoalDuration.year.asc(), MonthGoalDuration.month.asc())
+            .all()
+        )
+
+        return jsonify([MAPPER_MONTH_GOAL_DURATION.map(m) for m in monthGoals])
+
+    return api
